--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/100/Cranium.git
 [submodule "MNIST_Extractor"]
 	path = MNIST_Extractor
-	url = https://github.com/AndrewCarterUK/mnist-neural-network-plain-c.git
+	url = https://github.com/wichtounet/mnist.git
