--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,10 +9,10 @@
             "type": "cppdbg",
             "request": "launch",
             //"program": "${workspaceFolder}/build/${workspaceFolderBasename}",
-            "program": "${workspaceFolder}/proj_gemv/solution1/csim/build/csim.exe",
+            "program": "${workspaceFolder}/proj_training/solution1/csim/build/csim.exe",
             "args": [],
             "stopAtEntry": true,
-            "cwd": "${workspaceFolder}/build",
+            "cwd": "${workspaceFolder}/proj_training/solution1/csim/build",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
